form page large screens: fix border color in dark mode

--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -82,37 +82,20 @@ main {
     border-right: none;
     padding-top: 54px;
     padding-bottom: 54px;
-    /* height: 100%; */
-    /* margin-right: 1px; setting any margin here moves the right side div to the 
-                          next row down, under the orange circle. Why?? */
 }
 
 .landing-main-right {
     border-left: none;
-    /* height: 100%; */
-    /* height: 300px; */
-     /* this works to force the height to meet the border above. 
-                      Why doesn't height 100% work?? */
-    /* margin-left: 1px; setting any margin here moves the div to move to the
-                         next row down, under the orange circle. Why?? */
 }
 @media (min-width: 768px) {
     .landing-main-left {
         padding-top: 54px;
         padding-bottom: 54px;
-        border-right: solid 4px var(--very-dark);
-        /* height: 100%; */
-        /* margin-right: 1px; setting any margin here moves the right side div to the 
-                              next row down, under the orange circle. Why?? */
+        border-right: solid 4px;
     }
 
     .landing-main-right {
-        border-left: solid 4px var(--very-dark);
-        /* height: 100%; */
-        /* height: 300px;  */
-        /* this works to force the height to meet the border above. 
-                          Why doesn't height 100% work?? */
-
+        border-left: solid 4px;
     }
 }
 
